Prettify the recommended filesystem hierarchy for projects.
Source: http://odyniec.net/articles/turning-lists-into-trees/

--- a/examples_en.html
+++ b/examples_en.html
@@ -49,10 +49,9 @@ $app->run(); // without this, the whole page won't be displayed
                                 <p class="information">Hint: You can use F3 as a static class too by using e.g. F3::set(). But this is not
                                     adviseable and will be deprecated in future releases.</p>
 
-                                <p>We recommend the following way for your folder structure.</p>
-                                <ul>
-                                    <li>/</li>
-                                    <li>
+                                <p>We recommend the following layout for your folder structure.</p>
+                                <ul class="tree">
+                                    <li>/
                                         <ul>
                                             <li>/index.php</li>
                                             <li>/lib</li>
