--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
                 <img src="img/fatfreefridge_logo.png" class="logo" />
                 <p>for your next great thing, build on the glorious <a href="http://fatfree.sourceforge.net/" target="_blank">PHP Fat-Free Framework.</a><br />
                 The FatFreeFridge is an unofficial userguide which provides you a bunch of preserved examples and use-cases to make you familiar with F3.</p>
-                <p><a class="btn btn-primary btn-large" id="heromore" title="Contribute!" data-content="To complete this userguide, we would appreciate your help." href="#" rel="popover">Learn more &raquo;</a></p>
+                <p><a class="btn btn-primary btn-large" id="heromore" title="Contribute!" data-content="To complete this userguide, we would appreciate your help." href="https://github.com/ikkez/FatFreeFridge" rel="popover">Learn more &raquo;</a></p>
             </div>
             <div class="row">
                 <div class="span4">
